<resources>
    <string name="app_name">WPS</string>
    <!-- Strings used for fragments for navigation -->
    <string name="events_fragment_label">Próximos Eventos</string>

    <!-- EventBottomSheetDialog -->
    <string name="back_arrow">Voltar</string>
    <string name="add_participant">Adicionar participante</string>
    <string name="see_participants">Ver participantes</string>
    <string name="location">Localização</string>
    <string name="share">Compartilhar</string>

    <!-- EventBottomSheetDialog/Add participant -->
    <string name="name">Nome</string>
    <string name="email">Email</string>
    <string name="name_field">Campo nome</string>
    <string name="email_field">Campo email</string>
    <string name="add">Adicionar</string>
    <string name="add_button">Botão para adicionar participante</string>

    <!-- Event Layout -->
    <string name="event_image">Imagem do evento</string>

    <!-- EventBottomSheetDialog/Share -->
    <string name="wpp">Whatsapp</string>
    <string name="wpp_image">Icone do WhatsApp</string>
    <string name="messenger">Messenger</string>
    <string name="messenger_image">Icone do Messenger</string>
    <string name="telegram">Telegram</string>
    <string name="telegram_image">Icone do Telegram</string>
    <string name="others">Outros</string>
    <string name="others_image">Icone de outros compartilhamentos</string>

    <!-- EventBottomSheetDialog/Participants -->
    <string name="participant_name">Name example</string>

    <!-- EventsAdapter -->
    <string name="price_placeholder">R$ %1$.2f</string>
</resources>